scripts/nullness/original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8.txt
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/KhovanovMapNode.java:29: error: [method.invocation] call to makeBasis() not allowed on the given receiver.
        makeBasis();
                 ^
  found   : @UnderInitialization(KhovanovMapNode.class) @NonNull KhovanovMapNode
  required: @Initialized @NonNull KhovanovMapNode
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/SeifertCircle.java:13: error: [method.invocation] call to findMinEdge() not allowed on the given receiver.
        this.minEdge=findMinEdge();
                                ^
  found   : @UnderInitialization(SeifertCircle.class) @NonNull SeifertCircle
  required: @Initialized @NonNull SeifertCircle
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Tensor.java:17: error: [assignment] incompatible types in assignment.
        this.tensorProduct = b.toArray(this.tensorProduct);
                                      ^
  found   : @Initialized @Nullable BasisElement @Initialized @NonNull []
  required: @Initialized @NonNull BasisElement @Initialized @NonNull []
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Tensor.java:17: warning: [toarray.nullable.elements.not.newarray] call of toArray on collection of non-null elements yields an array of possibly-null elements; omit the argument to toArray or make it an explicit array constructor
        this.tensorProduct = b.toArray(this.tensorProduct);
                                      ^
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/DotsAndArrows.java:13: error: [method.invocation] call to fillRows() not allowed on the given receiver.
        fillRows();
                ^
  found   : @UnderInitialization(DotsAndArrows.class) @NonNull DotsAndArrows
  required: @Initialized @NonNull DotsAndArrows
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/DotsAndArrows.java:14: error: [method.invocation] call to fillArrows() not allowed on the given receiver.
        fillArrows();
                  ^
  found   : @UnderInitialization(DotsAndArrows.class) @NonNull DotsAndArrows
  required: @Initialized @NonNull DotsAndArrows
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/DotsAndArrows.java:15: error: [method.invocation] call to resolve() not allowed on the given receiver.
        resolve();
               ^
  found   : @UnderInitialization(DotsAndArrows.class) @NonNull DotsAndArrows
  required: @Initialized @NonNull DotsAndArrows
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/KhovanovMap.java:12: error: [initialization.fields.uninitialized] the constructor does not initialize fields: resolvedKnots, maps
    public KhovanovMap(Knot kn){
           ^
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/KhovanovMap.java:25: error: [method.invocation] call to fillResolvedKnots(Knot) not allowed on the given receiver.
        fillResolvedKnots(this.theKnot);
                         ^
  found   : @UnderInitialization @NonNull KhovanovMap
  required: @Initialized @NonNull KhovanovMap
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/KhovanovMap.java:26: error: [method.invocation] call to setMaps() not allowed on the given receiver.
        setMaps(); 
               ^
  found   : @UnderInitialization @NonNull KhovanovMap
  required: @Initialized @NonNull KhovanovMap
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Knot.java:15: error: [initialization.fields.uninitialized] the constructor does not initialize fields: leftknot, rightknot, smoothing
    public Knot(Crossing[] c){ //initial Knot
           ^
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Knot.java:40: error: [method.invocation] call to makeCircles() not allowed on the given receiver.
        makeCircles();
                   ^
  found   : @UnderInitialization @NonNull Knot
  required: @Initialized @NonNull Knot
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Knot.java:44: error: [initialization.fields.uninitialized] the constructor does not initialize fields: leftknot, rightknot
    public Knot(Crossing[] c, String code, Smoothing l, Vertex[] v){ //sc = seifertcircles
           ^
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Knot.java:138: error: [method.invocation] call to makeCircles() not allowed on the given receiver.
        makeCircles();
                   ^
  found   : @UnderInitialization @NonNull Knot
  required: @Initialized @NonNull Knot
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Vertex.java:9: error: [initialization.fields.uninitialized] the constructor does not initialize fields: from, to
    public Vertex(){
           ^
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Vertex.java:13: error: [initialization.fields.uninitialized] the constructor does not initialize fields: from, to
    public Vertex(int n){
           ^
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/MergeMap.java:16: error: [method.invocation] call to addTensorArrows() not allowed on the given receiver.
        addTensorArrows();
                       ^
  found   : @UnderInitialization(MergeMap.class) @NonNull MergeMap
  required: @Initialized @NonNull MergeMap
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/MergeMap.java:17: error: [method.invocation] call to toString() not allowed on the given receiver.
        System.out.println(toString());
                                   ^
  found   : @UnderInitialization(MergeMap.class) @NonNull MergeMap
  required: @Initialized @NonNull MergeMap
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Vplus.java:9: error: [method.invocation] call to findName() not allowed on the given receiver.
        this.name = findName();
                            ^
  found   : @UnderInitialization(Vplus.class) @NonNull Vplus
  required: @Initialized @NonNull Vplus
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/Vminus.java:9: error: [method.invocation] call to findName() not allowed on the given receiver.
        this.name = findName();
                            ^
  found   : @UnderInitialization(Vminus.class) @NonNull Vminus
  required: @Initialized @NonNull Vminus
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/SplitMap.java:16: error: [method.invocation] call to addTensorArrows() not allowed on the given receiver.
        addTensorArrows();
                       ^
  found   : @UnderInitialization(SplitMap.class) @NonNull SplitMap
  required: @Initialized @NonNull SplitMap
../original/url587829ef81_champdavis_KhovanovHomology_tgz-pJ8-KhovanovMapJ8/src/SplitMap.java:17: error: [method.invocation] call to toString() not allowed on the given receiver.
        System.out.println(toString());
                                   ^
  found   : @UnderInitialization(SplitMap.class) @NonNull SplitMap
  required: @Initialized @NonNull SplitMap
21 errors
1 warning
